--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -8,6 +8,12 @@ else
 NATIVEFORMATS=
 endif
 
+if HAVE_BPF
+BPFFORMATS=format_bpf.c
+else
+BPFFORMATS=
+endif
+
 if HAVE_ZLIB
 LIBTRACEIO=libtraceio-zlib.c
 else
@@ -17,7 +23,7 @@ endif
 libtrace_la_SOURCES = $(LIBTRACEIO) trace.c fifo.c fifo.h common.h \
 		format_erf.c format_pcap.c format_wag.c format_legacy.c \
 		format_rt.c format_helper.c format_helper.h format_pcapfile.c \
-		format_duck.c $(NATIVEFORMATS) \
+		format_duck.c $(NATIVEFORMATS) $(BPFFORMATS) \
 		parse_cmd.c parse_cmd.h libtrace_int.h lt_inttypes.h \
 		linktypes.c protocols.c libtraceio.h link_wireless.c 
 
