--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -1315,7 +1315,8 @@ enum base_format_t {
 	TRACE_FORMAT_LEGACY_POS	  =7,
 	TRACE_FORMAT_LEGACY_ETH   =8,
 	TRACE_FORMAT_LINUX_NATIVE =9,
-	TRACE_FORMAT_DUCK	  =10
+	TRACE_FORMAT_DUCK	  =10,
+	TRACE_FORMAT_BPF	  =11,
 };
 
 /** Gets the format type for a given packet.
