Distribute the samples(!)

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@ TOOLS_DIR = tools
 if LIBTRACE_SWIG
 SWIG_DIR = swig
 endif
-SUBDIRS = lib $(LIBPACKETDUMP_DIR) $(TOOLS_DIR) $(SWIG_DIR) docs
+SUBDIRS = lib $(LIBPACKETDUMP_DIR) $(TOOLS_DIR) $(SWIG_DIR) docs examples
 
 ACLOCAL_AMFLAGS = -I m4
 AUTOMAKE_OPTIONS = 1.5
