--- a/configure.in
+++ b/configure.in
@@ -21,6 +21,7 @@ AC_CONFIG_FILES([Makefile lib/Makefile docs/Makefile libpacketdump/Makefile
 	tools/tracemerge/Makefile tools/tracereport/Makefile 
 	tools/tracertstats/Makefile tools/tracesplit/Makefile 
 	tools/tracestats/Makefile 
+	examples/Makefile examples/skeleton/Makefile examples/rate/Makefile
 	docs/libtrace.doxygen 
 	lib/libtrace.h
 	swig/Makefile])
