--- a/configure.in
+++ b/configure.in
@@ -47,6 +47,10 @@ AC_TYPE_SIZE_T
 AC_HEADER_TIME
 AC_SYS_LARGEFILE
 
+if test "$GCC" = "yes"; then
+	CFLAGS="$CFLAGS -Wall"
+fi
+
 AC_PROG_LIBTOOL
 
 AC_ARG_ENABLE(swig,
