--- a/libpacketdump/Makefile.am
+++ b/libpacketdump/Makefile.am
@@ -116,7 +116,11 @@ plugin_LTLIBRARIES = $(BIN_PROTOCOLS)
 dist_plugin_DATA = $(TXT_PROTOCOLS)
 
 INCLUDES= @ADD_INCLS@ -I../lib 
-libpacketdump_la_LIBADD = @ADD_LIBS@ @LEXLIB@
+
+# NOTE: You CANNOT add @LEXLIBS@ here, as they are statically compiled
+# which on non x86_32 platforms means that they cannot be linked into
+# a shared library.
+libpacketdump_la_LIBADD = @ADD_LIBS@ 
 libpacketdump_la_LDFLAGS=\
         -version-info @LIBTRACE_MAJOR@:@LIBTRACE_MINOR@:@LIBTRACE_MID@ \
         @ADD_LDFLAGS@
